# Autofish

./: .gitignore  AGENTS.md  README.md  README_ZH.md  amc  gradle.properties  justfile  settings.gradle.kts
.github/workflows/: cli-ci.yml  cli-release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/example/amctl/data/model/: ServerConfig.kt
app/src/main/kotlin/com/example/amctl/di/: AppModule.kt
app/src/main/kotlin/com/example/amctl/mcp/: McpServer.kt
app/src/main/kotlin/com/example/amctl/rest/: OverlayManager.kt  RestServer.kt
app/src/main/kotlin/com/example/amctl/ui/: MainActivity.kt
app/src/main/kotlin/com/example/amctl/utils/: PermissionUtils.kt
app/src/main/kotlin/com/memohai/autofish/core/: ToolException.kt
app/src/main/kotlin/com/memohai/autofish/service/: OverlayManager.kt  ServiceServer.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
cli/: Cargo.toml  README.md  package-lock.json  package.json
cli/skills/android-stepwise-control/: SKILL.md
cli/skills/autofish-control/: SKILL.md
cli/src/: cli.rs  index.ts  main.rs  output.rs  runner.rs  session.ts
cli/src/api/: request.rs
cli/src/commands/: act.rs  common.rs  mod.rs  observe.rs  recover.rs  verify.rs
docs/: DESIGN-SKILL-LIBRARY.md
gradle/: libs.versions.toml
scripts/: 01-health.sh  02-init.sh  03-list-tools.sh  04-call-tool.sh  env.sh
scripts/examples/: get-screen-state.sh  launch-app.sh  list-packages.sh  shell.sh  start-intent.sh  tap.sh
(+36 files in other folders)
